# torch-redistribute

./: .gitignore  README.md  fsdp_unwrap.py  fsdp_unwrap_2.py  pyproject.toml  redistribute.py  redistribute_llama.py  test.py  test_llama_tp.py  test_memory_profile.py  test_redistribute_ctx_manager.py  test_tp.py  test_weight_sync.py
logs/: memory_timeline.json
torch_redistribute/: model.py  module_utils.py  redistribute.py  style.py  utils.py
