[project]
name = "torch_redistribute"
version = "0.1.0"

dependencies = [
    "tabulate",
    "torchtune", 
    "torchao",
    "torch"
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu124"
explicit = true


[[tool.uv.index]]
name = "torchtune"
url = "https://download.pytorch.org/whl/nightly/"
explicit = true