[project]
name = "torch_redistribute"
version = "0.1.0"

dependencies = [
    "torch",
    "tabulate",
    "torchtune", 
    "torchao",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = { index = "pytorch" }
torchtune = { index = "torchtune" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu124"

[[tool.uv.index]]
name = "torchtune"
url = "https://download.pytorch.org/whl/nightly/"